--- a/mobileApp/BackEnd/.env
+++ b/mobileApp/BackEnd/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://furniture2023:furniture2023@furniture.sn13ave.mongodb.net/furnitureapp
+MONGO_URL = mongodb+srv://plant2024:plant2024@plantidentfier.7hsth9e.mongodb.net/test
 PORT= 3000
-SECRET = furniture2023
-JWT_SEC = furniture2023
+SECRET = plant2024
+JWT_SEC = plant2024
