--- a/mobileApp/BackEnd/.env
+++ b/mobileApp/BackEnd/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://plant2024:plant2024@plantidentfier.7hsth9e.mongodb.net/test
+MONGO_URL = mongodb+srv://plant2024:plant2024@plantidentifier.7dei9pv.mongodb.net/plant
 PORT= 3000
 SECRET = plant2024
 JWT_SEC = plant2024
