--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-webview": "11.26.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-camera": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
