--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "node_modules/.bin/rn-nodeify --install fs,https --hack"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -16,20 +17,22 @@
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-webview": "11.26.0",
-    "yup": "^1.3.3",
-    "expo-camera": "~13.2.1"
+    "rn-nodeify": "^10.3.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
