--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.17",
     "@stripe/stripe-react-native": "0.23.3",
+    "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
@@ -22,20 +23,32 @@
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.5",
+    "https-browserify": "^0.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-level-fs": "^3.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "11.26.0",
     "rn-nodeify": "^10.3.0",
+    "undici-types": "^6.3.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "https": "https-browserify",
+    "fs": "react-native-level-fs"
+  },
+  "browser": {
+    "https": "https-browserify",
+    "fs": "react-native-level-fs"
+  }
 }
